# AcornGMBackend

./: Cargo.toml  Rocket.toml  build.rs  package-lock.json  package.json
frontend/: auth_config.json  discord_auth_page.html  discord_auth_redirected.html  eula.html  http_response_codes.js  index.html  login.css  login.html  login.js  not_found.html  register.html  registration_success.html  styles.css
src/: accounts.rs  catchers.rs  discord.rs  dropbox.rs  file_management.rs  login.rs  main.rs  mods.rs  not_found_html.rs  sanitize.rs  search_mods.rs  server.js
templates/: not_found.html  not_found.html.tera
