[package]
name = "acorngm-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["serde_json", "json"] }
tokio = { version = "1.44.1", features = ["full"] }
log = "0.4"
biologischer-log = { git = "https://github.com/BioTomateDE/rust-biologischer-log" }
dotenv = "0.15.0"
chrono = "0.4.40"
dropbox-sdk = { version = "0.19.1", features = ["async_routes", "default_async_client"] }
tokio-util = { version = "0.7.14", features = ["compat"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
colored = "3.0.0"
reqwest = { version = "0.12.15", features = ["json"] }
regex = "1.11.1"
rand = "0.9.0"
base64 = "0.22.1"
