[package]
name = "acorngm-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["serde_json", "json"] }
log = "0.4"
biologischer-log = { git = "https://github.com/BioTomateDE/rust-biologischer-log" }
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
regex = "1.11.1"
rand = "0.9.0"
base64 = "0.22.1"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "macros", "chrono", "json", "uuid", "bigdecimal"] }
once_cell = "1.21.3"
uuid = { version = "1.16.0", features = ["v4"] }
rocket-multipart-form-data = "0.10.7"
dotenvy = "0.15.7"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }

[build-dependencies]
dotenvy = "0.15.7"
